--- a/earphones.html
+++ b/earphones.html
@@ -87,7 +87,7 @@
 
   <section class="page-hero">
     <div class="container">
-      <h2 class="secondary-heading page-heading">Speakers</h2>
+      <h2 class="secondary-heading page-heading">Earphones</h2>
     </div>
   </section>
 
